--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "luxon": "^0.2.12",
     "mkdirp": "^0.5.1",
     "node-fetch": "^1.7.3",
-    "opn": "^5.2.0",
+    "open": "^7.4.0",
     "pino": "^4.10.2",
     "reflect-metadata": "^0.1.10",
     "simple-statistics": "^5.2.1",
@@ -64,7 +64,6 @@
     "@types/uuid": "^3.4.2",
     "@types/ws": "^4.0.1",
     "@types/zeromq": "^4.5.3",
-    "@types/opn": "^5.1.0",
     "coveralls": "^3.0.0",
     "cpy-cli": "^1.0.1",
     "jest": "^21.0.0",
