--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@bitr/chronodb": "^1.0.2",
     "@bitr/logger": "^1.0.1",
     "@bitr/zmq": "^1.1.0",
+    "axios": "^0.21.1",
     "chalk": "^2.3.0",
     "core-decorators": "^0.20.0",
     "date-fns": "^1.28.5",
